@@ -22,6 +22,13 @@ Added PHP version check
 
 Better error handling when the event listener fails
 
+Menu bug that would not always trigger an action when a menu item
+was clicked
+
+Added check for PHP LDAP extension in LDAP auth module
+
+Added experimental AD auth module 
+
 -------------------------------------
 	4.2-2	2012-10-15
 -------------------------------------
